--- a/dev-profile/dev-profile/Base.lproj/Main.storyboard
+++ b/dev-profile/dev-profile/Base.lproj/Main.storyboard
@@ -1,24 +1,132 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Avenir.ttc">
+            <string>Avenir-Medium</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="dev_profile" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Devslopes BG - June 2017-1920x1080" translatesAutoresizingMaskIntoConstraints="NO" id="A9K-WF-Fnb">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="Erm-iW-18I"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="devslopesProfileLogo" translatesAutoresizingMaskIntoConstraints="NO" id="rUS-py-s2d">
+                                <rect key="frame" x="10" y="120" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="Jen-Dn-j6h"/>
+                                    <constraint firstAttribute="height" constant="100" id="f3F-ld-f9c"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Devslopes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ClH-gz-Rgt">
+                                <rect key="frame" x="118" y="158.5" width="80" height="23.5"/>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="c9s-mS-bqU">
+                                <rect key="frame" x="70.5" y="245" width="234" height="57"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dS0-oZ-VhZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="58" height="57"/>
+                                        <state key="normal" image="cameraButton"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RNs-Py-GWo">
+                                        <rect key="frame" x="88" y="0.0" width="58" height="57"/>
+                                        <state key="normal" image="favoriteButton"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I00-E3-9ur">
+                                        <rect key="frame" x="176" y="0.0" width="58" height="57"/>
+                                        <state key="normal" image="inboxButton"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleAspectFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="B1f-e4-M9A">
+                                <rect key="frame" x="20" y="327" width="335" height="157.5"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Data Image" translatesAutoresizingMaskIntoConstraints="NO" id="Od9-v3-4sj">
+                                        <rect key="frame" x="0.0" y="0.0" width="157.5" height="157.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="160" id="Nhg-tR-uPE"/>
+                                            <constraint firstAttribute="width" secondItem="Od9-v3-4sj" secondAttribute="height" multiplier="1:1" id="pVT-LP-5uD"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Images Image" translatesAutoresizingMaskIntoConstraints="NO" id="Rmt-W0-bY8">
+                                        <rect key="frame" x="177.5" y="0.0" width="157.5" height="157.5"/>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleAspectFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ujs-S3-899">
+                                <rect key="frame" x="20" y="504.5" width="335" height="157.5"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Videos Image" translatesAutoresizingMaskIntoConstraints="NO" id="dmP-As-GTG">
+                                        <rect key="frame" x="0.0" y="0.0" width="157.5" height="157.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="dmP-As-GTG" secondAttribute="height" multiplier="1:1" id="oB9-CX-Zsy"/>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="160" id="tAm-xW-tnO"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Code" translatesAutoresizingMaskIntoConstraints="NO" id="cU3-WR-2Me">
+                                        <rect key="frame" x="177.5" y="0.0" width="157.5" height="157.5"/>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="B1f-e4-M9A" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="1Yw-k4-pyz"/>
+                            <constraint firstItem="ClH-gz-Rgt" firstAttribute="centerY" secondItem="rUS-py-s2d" secondAttribute="centerY" id="3Gg-B4-QTM"/>
+                            <constraint firstItem="A9K-WF-Fnb" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="8sE-BS-3e6"/>
+                            <constraint firstItem="ClH-gz-Rgt" firstAttribute="leading" secondItem="rUS-py-s2d" secondAttribute="trailing" constant="8" id="Ark-ae-GOI"/>
+                            <constraint firstItem="c9s-mS-bqU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="T1w-RR-udU"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ujs-S3-899" secondAttribute="trailing" constant="20" id="Tfj-as-BQL"/>
+                            <constraint firstItem="c9s-mS-bqU" firstAttribute="top" secondItem="rUS-py-s2d" secondAttribute="bottom" constant="25" id="ZhV-Ru-NGF"/>
+                            <constraint firstItem="A9K-WF-Fnb" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="aYH-8j-oAQ"/>
+                            <constraint firstItem="B1f-e4-M9A" firstAttribute="top" secondItem="c9s-mS-bqU" secondAttribute="bottom" constant="25" id="dcV-fR-bbq"/>
+                            <constraint firstItem="A9K-WF-Fnb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fSC-qr-ZS3"/>
+                            <constraint firstItem="rUS-py-s2d" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="hcn-Pp-7fI"/>
+                            <constraint firstItem="ujs-S3-899" firstAttribute="top" secondItem="B1f-e4-M9A" secondAttribute="bottom" constant="20" id="nqN-eX-m4W"/>
+                            <constraint firstItem="rUS-py-s2d" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="rz2-AE-pxJ"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ClH-gz-Rgt" secondAttribute="trailing" constant="20" symbolic="YES" id="uUc-js-fDj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="B1f-e4-M9A" secondAttribute="trailing" constant="20" id="xZ1-ga-apP"/>
+                            <constraint firstItem="ujs-S3-899" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="zYv-ox-QLf"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="118.29085457271366"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Code" width="500" height="250"/>
+        <image name="Data Image" width="500" height="250"/>
+        <image name="Devslopes BG - June 2017-1920x1080" width="1920" height="1080"/>
+        <image name="Images Image" width="500" height="250"/>
+        <image name="Videos Image" width="500" height="250"/>
+        <image name="cameraButton" width="57" height="57"/>
+        <image name="devslopesProfileLogo" width="191" height="191"/>
+        <image name="favoriteButton" width="58" height="57"/>
+        <image name="inboxButton" width="57" height="57"/>
+    </resources>
 </document>
